fixes alignment of header links, adds spacing between #do and #story, reverses fade for services

--- a/source/scss/hansen.scss
+++ b/source/scss/hansen.scss
@@ -4,14 +4,25 @@
 	margin-bottom: 25px;
 }
 
+button:hover, button:focus,
+.button:hover, .button:focus {
+	background-color: #00072D;
+}
+
 .magellan-container {
 	background-color: #010067;
 	min-width: inherit;
+	position: relative;
+	top: 5px;
 }
 
 .magellan-container dd.active a {
 	background-color: #fff;
 	color: #010067;
+}
+
+.sub-nav dt.active a:hover, .sub-nav dd.active a:hover, .sub-nav li.active a:hover {
+	background-color: white;
 }
 
 .content-section {
@@ -34,109 +45,7 @@
 
 .large { font-size: 18px; }
 
-.toggle-content {
-	position: relative;
-	
-	transition-duration: .9s;
-	transition-property: opacity;
-	transition-timing-function: ease;
-}
-
-.toggle-content.inactive {
-	opacity: 0;
-	height: 0;
-	position: absolute;
-	left: -9999px;
-}
-
-.toggle-content.active {
-	opacity: 1;
-	width: inherit;
-	height: inherit;
-	position: relative;
-}
-
-.toggle-control {
-	list-style: none;
-	text-align: center;
-}
-
-.toggle-control li {
-	display: inline-block;
-	vertical-align: middle;
-	height: 30px;
-	line-height: 30px;
-}
-
-.toggle-control li.first {
-	margin-right: 10px;
-}
-
-.toggle-control li a {
-	display: block;
-	position: relative;
-}
-
-.toggle-control li a.left-control {
-	padding-right: 27px;
-}
-
-.toggle-control li a.right-control {
-
-}
-
-.toggle-control li.first .control-text { margin-right: 4px; }
-.toggle-control li.last .control-text { margin-left: 4px; }
-
-.toggle-control .indicator {
-	display: inline-block;
-	width: 15px;
-	height: 15px;
-	border-radius: 15px;
-	border: 1px solid #ccc;
-	box-shadow: 0 0 5px #ccc;
-	position: absolute;
-	
-	transition-duration: .25s;
-	transition-property: all;
-	transition-timing-function: ease-in-out;
-}
-/*works*/
-
-.toggle-control li a.left-control .indicator {
-	right: 0px;
-	top: 8px;
-}
-
-.toggle-control li a.right-control .indicator {
-	left: 0px;
-	top: 7px;
-}
-
-.toggle-control li a.left-control .indicator.active {
-	top: 3px;
-}
-
-.toggle-control .control-text {
-	display: inline-block;
-	position: relative;
-}
-
-.toggle-control li a.right-control .control-text {
-	padding-left: 28px;
-}
-
-.toggle-control .indicator.active {
-	width: 25px;
-	height: 25px;
-	top: 6px;
-}
-
-.toggle-control li a.right-control .indicator.active {
-	top: 2px;
-}
-
-.button {;
+.button {
 	background-color: #010067;
 }
 
@@ -150,7 +59,7 @@
 
 .content-overlay::after {
 	content: '';
-	min-height: 727px;
+	min-height: 600px;
 	background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,1)), url('/lib/images/services-large.jpg');
 	background-repeat: no-repeat;
 	opacity: 1;
@@ -160,17 +69,7 @@
 	right: 0;
 	position: absolute;
 	z-index: -1;
-	transition: opacity 2s;
-}
-
-.content-overlay.transparent::after {
-	opacity: 0;
-	transition: opacity 2s;
-
-}
-
-.content-overlay .overlaying-content {
-	opacity: 0;
+	
 }
 
 .map,
@@ -179,7 +78,7 @@
 	width: 100%;
 }
 
-.alert-box { position: relative; }
+.alert-box {position: relative; }
 
 .alert-box.row { margin-bottom: 25px; }
 
@@ -227,7 +126,7 @@
 	margin-bottom: 25px !important;
 }
 
-.error-list { position: relative; }
+.error-list {position: relative; }
 
 .error-list.active {
 	transition-duration: 200ms;
@@ -243,3 +142,34 @@
 .footer {
 	margin-top: 50px;
 }
+
+.m0        { margin: 0px; }
+.m0-top    { margin-top: 0px; }
+.m0-right  { margin-right: 0px; }
+.m0-bottom { margin-bottom: 0px; }
+.m0-left   { margin-left: 0px; }
+.m1        { margin: 10px; }
+.m1-top    { margin-top: 10px; }
+.m1-right  { margin-right: 10px; }
+.m1-bottom { margin-bottom: 10px; }
+.m1-left   { margin-left: 10px; }
+.m2        { margin: 20px; }
+.m2-top    { margin-top: 20px; }
+.m2-right  { margin-right: 20px; }
+.m2-bottom { margin-bottom: 20px; }
+.m2-left   { margin-left: 20px; }
+.m3        { margin: 30px; }
+.m3-top    { margin-top: 30px; }
+.m3-right  { margin-right: 30px; }
+.m3-bottom { margin-bottom: 30px; }
+.m3-left   { margin-left: 30px; }
+.m4        { margin: 40px; }
+.m4-top    { margin-top: 40px; }
+.m4-right  { margin-right: 40px; }
+.m4-bottom { margin-bottom: 40px; }
+.m4-left   { margin-left: 40px; }
+.m5        { margin: 50px; }
+.m5-top    { margin-top: 50px; }
+.m5-right  { margin-right: 50px; }
+.m5-bottom { margin-bottom: 50px; }
+.m5-left   { margin-left: 50px; }
